--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="robots" content="noindex,nofollow" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <title>Bhunte Money - Admin</title>
+  <title>Rumsan Money - Admin</title>
 </head>
 <body>
   <div id="root"></div>
